src/Components/PromoVideo/PromoVideo.css
.promo_video {
  padding-top: 238px;
  width: 100%;
  background-color: #000;
}
.promo_video_blur {
  position: absolute;
  width: 888px;
  height: 230px;
  background: rgba(44, 183, 116, 0.85);
  filter: blur(300px);
}
.promo_video_heading {
  display: flex;
  justify-content: center;
}
.promo_video_heading > h1 {
  font-family: "Gotham";
  font-style: normal;
  font-weight: 700;
  font-size: 120px;
  line-height: 133px;
  color: #2cb774;
}
.video_player_section {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 86px;
  width: 100%;
  height: 741.13px;
  background: rgba(255, 255, 255, 0.1);
  box-shadow: 6.99178px 6.99178px 9.32237px -1.1653px rgba(0, 0, 0, 0.12);
  border-radius: 11.653px;
}
.player {
  width: 90%;
  height: 638.44px;
  border-radius: 11.653px;
  overflow: hidden;
  background-color: #fff;
}

@media (max-width: 430px) {
  .promo_video {
    padding-top: 53px;
  }
  .promo_video_blur {
    width: 185px;
    height: 52.59px;
    background: rgba(44, 183, 116, 0.6);
    filter: blur(59.2189px);
  }
  .promo_video_heading {
    display: flex;
    justify-content: center;
  }
  .promo_video_heading > h1 {
    font-size: 21.1418px;
    line-height: 20px;
  }
  .video_player_section {
    margin-top: 24px;
    width: 100%;
    height: 206.19px;
    box-shadow: 1.94521px 1.94521px 2.59361px -0.324201px rgba(0, 0, 0, 0.12);
    border-radius: 3.24201px;
  }
  .player {
    width: 90%;
    height: 85%;
    border-radius: 3.24201px;
    overflow: hidden;
  }
}

